Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    min-width: 500px;
-    min-height: 500px;
+    min-width: 25vw;
+    min-height: 25vh;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 body {
@@ -11,11 +12,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    margin: 0;
     background-color: #f5f5f5;
 }
 
@@ -40,4 +37,26 @@ button:active {
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+input {
+    margin: 25px 15px;
+    background-color: #4c98af;
+    border: none;
+    border-radius: 10px;
+}
+
+#colorPicker {
+    width: 120px;
+    height: 48px;
+    background-color: black;
+}
+
+input::-webkit-color-swatch {
+    border: none;
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
 }
